website/tests/snapshots/types/mapped-types.exp
=== block 1 ===
No errors!

=== block 2 ===
No errors!

=== block 3 ===
Error ------------------------------------------------------------------------- -:2:28

Cannot instantiate mapped type [1] because boolean [2] is incompatible with `string | number | symbol`, so it cannot be
used to generate keys for mapped type [1]. [incompatible-type]

   -:2:28
   2| type MappedType = {[key in boolean]: number}; // ERROR!
                                 ^^^^^^^ [2]

References:
   -:2:19
   2| type MappedType = {[key in boolean]: number}; // ERROR!
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]


Found 1 error

=== block 4 ===
No errors!

=== block 5 ===
No errors!

=== block 6 ===
No errors!

=== block 7 ===
No errors!

=== block 8 ===
No errors!

=== block 9 ===
No errors!

=== block 10 ===
No errors!

=== block 11 ===
Error -------------------------------------------------------------------------- -:4:2

Cannot cast object literal to `RequiredO` because property `bar` is missing in object literal [1] but exists in mapped
type [2]. [incompatible-type]

   -:4:2
   4| ({foo: 1}) as RequiredO; // ERROR: bar is now required
       ^^^^^^^^ [1]

References:
   -:4:15
   4| ({foo: 1}) as RequiredO; // ERROR: bar is now required
                    ^^^^^^^^^ [2]


Found 1 error

=== block 12 ===
Error -------------------------------------------------------------------------- -:6:1

Cannot cast `m.a` to string because undefined [1] is incompatible with string [2]. [incompatible-type]

   -:6:1
   6| m.a as string; // ERROR: void is still part of the value type
      ^^^

References:
   -:3:34
   3| type Mapped = {[K in keyof T]-?: T[K]};
                                       ^^^^ [1]
   -:6:8
   6| m.a as string; // ERROR: void is still part of the value type
             ^^^^^^ [2]


Found 1 error

=== block 13 ===
Error -------------------------------------------------------------------------- -:4:2

Cannot cast array literal to `AllRequired` because array literal [1] has 1 element but array type [2] has 3 elements.
[invalid-tuple-arity]

   -:4:2
   4| (['']) as AllRequired; // ERROR: elements 1 and 2 are now required
       ^^^^ [1]

References:
   -:4:11
   4| (['']) as AllRequired; // ERROR: elements 1 and 2 are now required
                ^^^^^^^^^^^ [2]


Found 1 error

=== block 14 ===
Error -------------------------------------------------------------------------- -:6:1

Cannot cast empty string to indexed access because string [1] is incompatible with boolean [2]. [incompatible-type]

   -:6:1
   6| '' as MappedTuple[0] // error
      ^^ [1]

References:
   -:3:41
   3| type MappedTuple = {[K in keyof Tuple]: Tuple[K] extends number ? boolean : string};
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

Error -------------------------------------------------------------------------- -:7:1

Cannot cast `false` to indexed access because boolean [1] is incompatible with string [2]. [incompatible-type]

   -:7:1
   7| false as MappedTuple[1] // error
      ^^^^^ [1]

References:
   -:3:41
   3| type MappedTuple = {[K in keyof Tuple]: Tuple[K] extends number ? boolean : string};
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

Error -------------------------------------------------------------------------- -:9:1

Cannot assign `true` to `mapped[0]` because tuple element at index `0` [1] labeled `a` is not writable. [cannot-write]

   9| mapped[0] = true; // error: cannot-write
      ^^^^^^^^^ [1]


Found 3 errors

=== block 15 ===
Error ------------------------------------------------------------------------- -:4:21

Mapped Types do not yet support variance annotations on array inputs. [invalid-mapped-type]

   4| type Unsupported1 = {readonly [K in keyof Tuple]: string}; // Error
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error ------------------------------------------------------------------------- -:5:21

Mapped Types do not yet support variance annotations on array inputs. [invalid-mapped-type]

   5| type Unsupported2 = {writeonly [K in keyof Tuple]: string}; // Error
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Found 2 errors
